feat/crud-character+fixes
