# src/routes/character.route.ts
@@ -14,7 +14,26 @@ class CharacterRoute {
       '/fetch-characters-data',
       CharacterController.handleFetchCharacters.bind(this)
     );
-    this.router.get('/characters');
+    this.router.get(
+      '/characters',
+      CharacterController.handleGetCharacters.bind(this)
+    );
+    this.router.get(
+      '/characters/:id',
+      CharacterController.handleGetCharacterById.bind(this)
+    );
+    this.router.post(
+      '/characters',
+      CharacterController.handleCreateCharacter.bind(this)
+    );
+    this.router.put(
+      '/characters/:id',
+      CharacterController.handleUpdateCharacter.bind(this)
+    );
+    this.router.delete(
+      '/characters/:id',
+      CharacterController.handleDeleteCharacter.bind(this)
+    );
   }
 }
 
